# Translator

./: .gitignore  README.md  render.yaml  vercel.json
apps/server/: .env.example  Dockerfile  README.md  pyproject.toml
apps/server/app/: config.py  gemini_client.py  groq_client.py  languages.py  main.py  openai_client.py  rooms.py  schemas.py
apps/web/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: HealthBadge.tsx  LanguageSelect.tsx  Layout.tsx  PageTransition.tsx  RecordButton.tsx  Skeleton.tsx  Toast.tsx
apps/web/src/hooks/: useLanguages.ts  useStreamingText.ts  useTTS.ts
apps/web/src/lib/: api.ts  audio.ts  languages.ts  speech.ts  storage.ts  types.ts
apps/web/src/modes/: CallMode.tsx  DialogueMode.tsx  RealtimeMode.tsx  TranslationMode.tsx
