[tool.poetry]
name = "translator-server"
version = "0.1.0"
description = "SayMi-style AI translator backend (FastAPI + OpenAI)"
authors = ["newprogrammer25 <eduardkerr788@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
openai = "^1.51.0"
python-multipart = "^0.0.12"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pydantic = "^2.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
